--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmobra.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmobra.lfm
@@ -1,7 +1,7 @@
 object frmObra: TfrmObra
-  Left = 576
+  Left = 1152
   Height = 617
-  Top = 134
+  Top = 150
   Width = 653
   Caption = 'CRUD de Obra'
   ClientHeight = 617
@@ -23,9 +23,9 @@ object frmObra: TfrmObra
       ClientWidth = 792
       object DBgridObra: TDBGrid
         Left = 0
-        Height = 527
+        Height = 584
         Top = 0
-        Width = 621
+        Width = 648
         Color = clWindow
         Columns = <>
         DataSource = dataSourceObra
@@ -121,8 +121,8 @@ object frmObra: TfrmObra
         Height = 336
         Top = 248
         Width = 648
-        ActivePage = tabObraExemplar
-        TabIndex = 0
+        ActivePage = tabObraAssunto
+        TabIndex = 2
         TabOrder = 4
         OnChange = PageControlObraExternasChange
         object tabObraExemplar: TTabSheet
@@ -137,6 +137,7 @@ object frmObra: TfrmObra
             Color = clWindow
             Columns = <>
             DataSource = dataSourceObraExemplar
+            Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
             TabOrder = 0
           end
           object DBNavigatorObraExemplar: TDBNavigator
@@ -170,6 +171,7 @@ object frmObra: TfrmObra
             Color = clWindow
             Columns = <>
             DataSource = dataSourceObraAutor
+            Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
             TabOrder = 0
           end
           object DBNavigatorObraAutor: TDBNavigator
@@ -203,6 +205,7 @@ object frmObra: TfrmObra
             Color = clWindow
             Columns = <>
             DataSource = dataSourceObraAssunto
+            Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
             TabOrder = 0
           end
           object DBNavigatorObraAssunto: TDBNavigator
@@ -271,6 +274,7 @@ object frmObra: TfrmObra
   object qryObraAutor: TZQuery
     Connection = DataModule1.ConBiblioteca
     UpdateObject = qryUpdateObraAutor
+    Active = True
     SQL.Strings = (
       'select obra_autor.*, autor.nome from obra_autor, autor'
       'where  '
@@ -285,6 +289,9 @@ object frmObra: TfrmObra
         ParamType = ptUnknown
       end>
     DataSource = dataSourceObra
+    MasterFields = 'obr_codigo'
+    MasterSource = dataSourceObra
+    LinkedFields = 'obr_codigo'
     Left = 560
     Top = 312
     ParamData = <    
@@ -349,6 +356,7 @@ object frmObra: TfrmObra
   object qryObraAssunto: TZQuery
     Connection = DataModule1.ConBiblioteca
     UpdateObject = qryUpdateObraAssunto
+    Active = True
     SQL.Strings = (
       'select obra_assunto.*, assunto.descricao'
       ' from '
@@ -365,6 +373,9 @@ object frmObra: TfrmObra
         ParamType = ptUnknown
       end>
     DataSource = dataSourceObra
+    MasterFields = 'obr_codigo'
+    MasterSource = dataSourceObra
+    LinkedFields = 'obr_codigo'
     Left = 560
     Top = 432
     ParamData = <    
@@ -451,6 +462,7 @@ object frmObra: TfrmObra
   object qryObraExemplar: TZQuery
     Connection = DataModule1.ConBiblioteca
     UpdateObject = qryUpdateObraExemplar
+    Active = True
     SQL.Strings = (
       'select * '
       'from exemplar'
@@ -463,6 +475,9 @@ object frmObra: TfrmObra
         ParamType = ptUnknown
       end>
     DataSource = dataSourceObra
+    MasterFields = 'obr_codigo'
+    MasterSource = dataSourceObra
+    LinkedFields = 'obr_codigo'
     Left = 480
     Top = 312
     ParamData = <    
