--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/x86_64-win64/untfrmeditora.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/x86_64-win64/untfrmeditora.lfm
@@ -1,11 +1,11 @@
 object frmEditora: TfrmEditora
   Left = 1153
-  Height = 345
+  Height = 319
   Top = 470
-  Width = 403
+  Width = 390
   Caption = 'frmEditora'
-  ClientHeight = 345
-  ClientWidth = 403
+  ClientHeight = 319
+  ClientWidth = 390
   OnCreate = FormCreate
   LCLVersion = '2.2.2.0'
   object PageControlEditora: TPageControl
@@ -13,8 +13,8 @@ object frmEditora: TfrmEditora
     Height = 312
     Top = 8
     Width = 384
-    ActivePage = TabEditar
-    TabIndex = 1
+    ActivePage = TabConsulta
+    TabIndex = 0
     TabOrder = 0
     object TabConsulta: TTabSheet
       Caption = 'Consulta'
@@ -28,6 +28,7 @@ object frmEditora: TfrmEditora
         Color = clWindow
         Columns = <>
         DataSource = DataSourceEditora
+        Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
         TabOrder = 0
       end
     end
@@ -37,9 +38,9 @@ object frmEditora: TfrmEditora
       ClientWidth = 376
       object DBNavigatorEditora: TDBNavigator
         Left = 32
-        Height = 25
+        Height = 33
         Top = 128
-        Width = 241
+        Width = 256
         BevelOuter = bvNone
         ChildSizing.EnlargeHorizontal = crsScaleChilds
         ChildSizing.EnlargeVertical = crsScaleChilds
@@ -47,14 +48,14 @@ object frmEditora: TfrmEditora
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 100
-        ClientHeight = 25
-        ClientWidth = 241
+        ClientHeight = 33
+        ClientWidth = 256
         DataSource = DataSourceEditora
         Options = []
         TabOrder = 0
       end
       object DBEditNome: TDBEdit
-        Left = 32
+        Left = 136
         Height = 23
         Top = 71
         Width = 152
@@ -64,18 +65,34 @@ object frmEditora: TfrmEditora
         TabOrder = 1
       end
       object labelNome: TLabel
-        Left = 32
+        Left = 136
         Height = 15
         Top = 40
         Width = 33
         Caption = 'Nome'
         ParentColor = False
       end
+      object DBEdit1: TDBEdit
+        Left = 32
+        Height = 23
+        Top = 72
+        Width = 56
+        MaxLength = 0
+        TabOrder = 2
+      end
+      object labelCodigoEditora: TLabel
+        Left = 32
+        Height = 15
+        Top = 40
+        Width = 95
+        Caption = 'Codigo da Editora'
+        ParentColor = False
+      end
     end
   end
   object DataSourceEditora: TDataSource
     DataSet = DataModule1.qryEditora
-    Left = 316
-    Top = 329
+    Left = 272
+    Top = 248
   end
 end
