--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/x86_64-win64/untfrmusuario.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/x86_64-win64/untfrmusuario.lfm
@@ -1,7 +1,7 @@
 object frmUsuario: TfrmUsuario
-  Left = 1129
+  Left = 12
   Height = 427
-  Top = 404
+  Top = 173
   Width = 758
   Caption = 'frmUsuario'
   ClientHeight = 427
@@ -20,65 +20,69 @@ object frmUsuario: TfrmUsuario
       ClientHeight = 396
       ClientWidth = 752
       object DBGridUsuario: TDBGrid
-        Left = 0
-        Height = 336
+        Left = 4
+        Height = 400
         Top = 0
-        Width = 744
+        Width = 750
         Color = clWindow
         Columns = <        
           item
             Title.Caption = 'usu_codigo'
+            Width = 76
             FieldName = 'usu_codigo'
           end        
           item
             Title.Caption = 'nome'
-            Width = 100
+            Width = 60
             FieldName = 'nome'
           end        
           item
             Title.Caption = 'logradouro'
-            Width = 100
+            Width = 74
             FieldName = 'logradouro'
           end        
           item
             Title.Caption = 'numero'
+            Width = 57
             FieldName = 'numero'
           end        
           item
             Title.Caption = 'complemento'
-            Width = 100
+            Width = 90
             FieldName = 'complemento'
           end        
           item
             Title.Caption = 'bairro'
-            Width = 100
+            Width = 49
             FieldName = 'bairro'
           end        
           item
             Title.Caption = 'cidade'
-            Width = 100
+            Width = 82
             FieldName = 'cidade'
           end        
           item
             Title.Caption = 'uf'
-            Width = 50
+            Width = 32
             FieldName = 'uf'
           end        
           item
             Title.Caption = 'cep'
+            Width = 57
             FieldName = 'cep'
           end        
           item
             Title.Caption = 'telefone'
-            Width = 100
+            Width = 63
             FieldName = 'telefone'
           end        
           item
             Title.Caption = 'cpf'
-            Width = 100
+            Width = 81
             FieldName = 'cpf'
           end>
         DataSource = dataSourceUsuario
+        Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
         TabOrder = 0
       end
     end
@@ -96,6 +100,16 @@ object frmUsuario: TfrmUsuario
         MaxLength = 50
         TabOrder = 0
       end
+      object DBEditLogradouro: TDBEdit
+        Left = 184
+        Height = 23
+        Top = 48
+        Width = 80
+        DataField = 'logradouro'
+        DataSource = dataSourceUsuario
+        MaxLength = 50
+        TabOrder = 9
+      end
       object DBEditNumero: TDBEdit
         Left = 336
         Height = 23
@@ -106,15 +120,25 @@ object frmUsuario: TfrmUsuario
         MaxLength = 6
         TabOrder = 1
       end
-      object DBEditUF: TDBEdit
-        Left = 336
+      object DBEditComplemento: TDBEdit
+        Left = 488
+        Height = 23
+        Top = 48
+        Width = 104
+        DataField = 'complemento'
+        DataSource = dataSourceUsuario
+        MaxLength = 50
+        TabOrder = 5
+      end
+      object DBEditBairro: TDBEdit
+        Left = 40
         Height = 23
         Top = 152
         Width = 80
-        DataField = 'uf'
+        DataField = 'bairro'
         DataSource = dataSourceUsuario
-        MaxLength = 2
-        TabOrder = 2
+        MaxLength = 50
+        TabOrder = 8
       end
       object DBEditCidade: TDBEdit
         Left = 184
@@ -126,6 +150,16 @@ object frmUsuario: TfrmUsuario
         MaxLength = 50
         TabOrder = 3
       end
+      object DBEditUF: TDBEdit
+        Left = 336
+        Height = 23
+        Top = 152
+        Width = 80
+        DataField = 'uf'
+        DataSource = dataSourceUsuario
+        MaxLength = 2
+        TabOrder = 2
+      end
       object DBEditCep: TDBEdit
         Left = 488
         Height = 23
@@ -135,16 +169,6 @@ object frmUsuario: TfrmUsuario
         DataSource = dataSourceUsuario
         MaxLength = 8
         TabOrder = 4
-      end
-      object DBEditComplemento: TDBEdit
-        Left = 488
-        Height = 23
-        Top = 48
-        Width = 104
-        DataField = 'complemento'
-        DataSource = dataSourceUsuario
-        MaxLength = 50
-        TabOrder = 5
       end
       object DBEditTelefone: TDBEdit
         Left = 184
@@ -165,26 +189,6 @@ object frmUsuario: TfrmUsuario
         DataSource = dataSourceUsuario
         MaxLength = 11
         TabOrder = 7
-      end
-      object DBEditBairro: TDBEdit
-        Left = 40
-        Height = 23
-        Top = 152
-        Width = 80
-        DataField = 'bairro'
-        DataSource = dataSourceUsuario
-        MaxLength = 50
-        TabOrder = 8
-      end
-      object DBEditLogradouro: TDBEdit
-        Left = 184
-        Height = 23
-        Top = 48
-        Width = 80
-        DataField = 'logradouro'
-        DataSource = dataSourceUsuario
-        MaxLength = 50
-        TabOrder = 9
       end
       object labelNome: TLabel
         Left = 40
@@ -267,10 +271,10 @@ object frmUsuario: TfrmUsuario
         ParentColor = False
       end
       object DBNavigatorUsuario: TDBNavigator
-        Left = 56
-        Height = 25
-        Top = 336
-        Width = 241
+        Left = 96
+        Height = 40
+        Top = 320
+        Width = 416
         BevelOuter = bvNone
         ChildSizing.EnlargeHorizontal = crsScaleChilds
         ChildSizing.EnlargeVertical = crsScaleChilds
@@ -278,8 +282,8 @@ object frmUsuario: TfrmUsuario
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 100
-        ClientHeight = 25
-        ClientWidth = 241
+        ClientHeight = 40
+        ClientWidth = 416
         DataSource = dataSourceUsuario
         Options = []
         TabOrder = 10
