--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmemprestimo.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmemprestimo.lfm
@@ -1,7 +1,7 @@
 object frmEmprestimo: TfrmEmprestimo
-  Left = 864
+  Left = 633
   Height = 574
-  Top = 80
+  Top = 152
   Width = 796
   Caption = 'frmEmprestimo'
   ClientHeight = 574
@@ -113,6 +113,8 @@ object frmEmprestimo: TfrmEmprestimo
             Color = clWindow
             Columns = <>
             DataSource = dataSourceUsuario
+            Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
+            ReadOnly = True
             TabOrder = 0
           end
         end
@@ -128,6 +130,8 @@ object frmEmprestimo: TfrmEmprestimo
             Color = clWindow
             Columns = <>
             DataSource = dataSourceObra
+            Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
+            ReadOnly = True
             TabOrder = 0
           end
         end
@@ -143,6 +147,8 @@ object frmEmprestimo: TfrmEmprestimo
             Color = clWindow
             Columns = <>
             DataSource = dataSourceEmprestimoExemplar
+            Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgAutoSizeColumns]
+            ReadOnly = True
             TabOrder = 0
           end
         end
@@ -160,9 +166,9 @@ object frmEmprestimo: TfrmEmprestimo
       end
       object DBnavigatorEmprestimo: TDBNavigator
         Left = 224
-        Height = 28
-        Top = 88
-        Width = 281
+        Height = 36
+        Top = 80
+        Width = 320
         BevelOuter = bvNone
         ChildSizing.EnlargeHorizontal = crsScaleChilds
         ChildSizing.EnlargeVertical = crsScaleChilds
@@ -170,8 +176,8 @@ object frmEmprestimo: TfrmEmprestimo
         ChildSizing.ShrinkVertical = crsScaleChilds
         ChildSizing.Layout = cclLeftToRightThenTopToBottom
         ChildSizing.ControlsPerLine = 100
-        ClientHeight = 28
-        ClientWidth = 281
+        ClientHeight = 36
+        ClientWidth = 320
         DataSource = dataSourceEmprestimo
         Options = []
         TabOrder = 2
@@ -201,6 +207,7 @@ object frmEmprestimo: TfrmEmprestimo
         ListFieldIndex = 0
         ListSource = dataSourceExemplar
         LookupCache = False
+        OnChange = DBlookUpComboBoxExemplarChange
         TabOrder = 4
       end
       object DBlookUpComboBoxUsuario: TDBLookupComboBox
@@ -291,7 +298,7 @@ object frmEmprestimo: TfrmEmprestimo
         Name = 'obr_codigo'
         ParamType = ptUnknown
       end>
-    DataSource = dataSourceEmprestimoExemplar
+    DataSource = dataSourceObra
     Left = 730
     Top = 184
     ParamData = <    
